@@ -1,5 +1,6 @@
 0.7.2 [2012-07- in progress]
 Added "Mark all" and "Mark none" buttons to the satellites import window.
+Added a search/filter feature to the main satellites list.
 
 0.7.1 [2012-01-08]
 Added basic GUI for adding satellites from TLE lists.
